Add initial comments endpoints
