# internal/server/openapi.yaml
@@ -711,6 +711,59 @@ paths:
           $ref: '#/components/responses/unprocessableEntityError'
         '500':
           $ref: '#/components/responses/internalServerError'
+  /events/{eventKey}/matches/{matchKey}/comments/{teamKey}:
+    parameters:
+      - $ref: '#/components/parameters/eventKey'
+      - $ref: '#/components/parameters/matchKey'
+      - $ref: '#/components/parameters/teamKey'
+    get:
+      summary: Get comments for a team in a match at an event
+      operationId: getTeamMatchComments
+      security:
+        - BearerAuth: []
+      tags:
+        - comments
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/comment'
+        '401':
+          $ref: '#/components/responses/unauthorizedError'
+        '404':
+          $ref: '#/components/responses/notFoundError'
+        '500':
+          $ref: '#/components/responses/internalServerError'
+    put:
+      summary: Submit a comment for a team in a match at an event
+      security:
+        - BearerAuth: []
+      operationId: postTeamMatchComment
+      tags:
+        - comments
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/comment'
+      responses:
+        '201':
+          description: Submitted new comment
+        '204':
+          description: Successfully replaced existing comment
+        '401':
+          $ref: '#/components/responses/unauthorizedError'
+        '403':
+          $ref: '#/components/responses/forbiddenError'
+        '404':
+          $ref: '#/components/responses/notFoundError'
+        '422':
+          $ref: '#/components/responses/unprocessableEntityError'
+        '500':
+          $ref: '#/components/responses/internalServerError'
   /leaderboard:
     get:
       summary: Get a count of reports submitted for each reporter
@@ -979,6 +1032,15 @@ components:
           example: Center Scale
         data:
           $ref: '#/components/schemas/reportData'
+    comment:
+      required:
+        - comment
+      properties:
+        reporterId:
+          $ref: '#/components/schemas/id'
+        comment:
+          type: string
+          example: 'Played good defense'
     reportData:
       required:
         - auto
