# internal/server/routes.go
@@ -40,6 +40,9 @@ func (s *Server) registerRoutes() *mux.Router {
 	r.Handle("/events/{eventKey}/matches/{matchKey}/reports/{teamKey}", ihttp.ACL(s.getReports(), false, false, false)).Methods("GET")
 	r.Handle("/events/{eventKey}/matches/{matchKey}/reports/{teamKey}", ihttp.ACL(s.putReport(), false, true, true)).Methods("PUT")
 
+	r.Handle("/events/{eventKey}/matches/{matchKey}/comments/{teamKey}", ihttp.ACL(s.getComments(), false, false, false)).Methods("GET")
+	r.Handle("/events/{eventKey}/matches/{matchKey}/comments/{teamKey}", ihttp.ACL(s.putComments(), false, true, true)).Methods("PUT")
+
 	r.Handle("/leaderboard", s.leaderboardHandler()).Methods("GET")
 
 	r.Handle("/realms", s.realmsHandler()).Methods("GET")
